docs/7.56/md/abeninternationalization_gdl.md
---
title: "Internationalization"
description: |
  Business software used by internationally operating enterprises has to meet certain localization requirements, for example by providing different logon languages or by meeting different legal requirements. In the SAP environment, the language aspect is known as internationalization and is part of th
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninternationalization_gdl.htm"
abapFile: "abeninternationalization_gdl.htm"
keywords: ["do", "if", "abeninternationalization", "gdl"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Guidelines](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_pgl.htm) →  [Robust ABAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrobust_abap_gdl.htm) → 

Internationalization

Business software used by internationally operating enterprises has to meet certain localization requirements, for example by providing different logon languages or by meeting different legal requirements. In the SAP environment, the language aspect is known as internationalization and is part of the Globalization [product standard](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencorrectness_quality_guidl.htm "Guideline"). As a consequence, translatable text sources must be used when developing in ABAP, and the technical requirements for handling variable character sets must be respected.

-   [Storing System Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensystem_text_guidl.htm "Guideline")
-   [Translation-Friendly Message Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentrans_relevant_text_guidl.htm "Guideline")
-   [Text Environment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentext_environm_guidl.htm "Guideline")
-   [Character Set in Source Code](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencharacter_set_guidl.htm "Guideline")
-   [Splitting Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensplit_text_guidl.htm "Guideline")
-   [Code Pages for Files](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencodepage_file_guidl.htm "Guideline")

Continue
[Storing System Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensystem_text_guidl.htm)
[Translation-Friendly Message Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentrans_relevant_text_guidl.htm)
[Text Environment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentext_environm_guidl.htm)
[Character Set of ABAP Source Code](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencharacter_set_guidl.htm)
[Splitting Texts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensplit_text_guidl.htm)
[Code Pages for Files](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencodepage_file_guidl.htm)